objects/Lead_Requirements__mdt.object
<CustomObject>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                    <default>true</default>
                    <label>Applicant</label>
                </value>
                <value>
                    <fullName>Co-applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assets</fullName>
                    <default>true</default>
                    <label>Assets</label>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Valuation</fullName>
                </value>
                <value>
                    <fullName>Application Package</fullName>
                </value>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_vs_External__c</fullName>
        <label>Internal vs External</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                    <default>true</default>
                    <label>External</label>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <label>Lead Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HomeBuyer</fullName>
                    <default>true</default>
                    <label>HomeBuyer</label>
                </value>
                <value>
                    <fullName>HomeOwner</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement Type</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Success_Factor__c</fullName>
        <label>Success Factor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                    <default>true</default>
                    <label>Credit</label>
                </value>
                <value>
                    <fullName>DTI</fullName>
                </value>
                <value>
                    <fullName>LTV</fullName>
                </value>
                <value>
                    <fullName>OAV</fullName>
                </value>
                <value>
                    <fullName>Property Ownership</fullName>
                </value>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Post-Closing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Request</fullName>
                    <default>true</default>
                    <label>Data Request</label>
                </value>
                <value>
                    <fullName>Stipulation</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lead_Requirement</label>
    <pluralLabel>Lead_Requirements</pluralLabel>
</CustomObject>